name:                vcd
version:             0.2.0.0
synopsis:            Read and write VCD and EVCD files per ieee1364
description:
license:             GPL-3
license-file:        LICENSE
author:              Michael Fox
maintainer:          mfox@posteo.net
copyright:           Copyright: (c) 2016-2017 Michael Fox
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2
extra-source-files: ALDC/memstream.h
                    ALDC/aldc.h
                    ALDC/bitfile.h		ALDC/lzlocal.h
                    ALDC/fmemopen.h


library
  -- without profiling
  ghc-options: -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -O2
  -- with profiling:
  -- ghc-options: -prof -threaded -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -with-rtsopts=-N -rtsopts
  -- -O2
 -- -fllvm
 --  -eventlog
  exposed-modules:     Vcd,
                       Chunk,
                       Hcd,
                       Util,
                       WaveTable,
                       Lib
  build-depends:       base,
                       attoparsec,
                       bytestring,
                       containers,
                       hashable,
                       parallel,
                       process-extras,
                       mmap,
                       optparse-applicative,
                       split,
                       unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions: OverloadedStrings,
                      BangPatterns

Executable vcd-strip
  ghc-options: -threaded -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates "-with-rtsopts=-N -qb0 -qg0 -G2 -A10M -H4000M -qa" -rtsopts -O2
  Main-Is:        vcd-strip.hs
  Hs-Source-Dirs: app
  build-depends:        base,
                        vcd,
                        attoparsec,
                        bytestring,
                        containers,
                        unordered-containers
  default-language:    Haskell2010
  default-extensions: OverloadedStrings,
                      BangPatterns

Executable avc-transpose-hus
  ghc-options:  -rtsopts -O2 -threaded
  Main-Is:        avc-transpose.hs
  Hs-Source-Dirs: app
  build-depends:        base,
                        vcd,
                        bytestring,
                        array,
                        repa,
                        spool,
                        vector,
                        optparse-applicative,
                        mmap
  default-language:    Haskell2010

Executable hus-x1-hub
  ghc-options:  -rtsopts -O2 -threaded
  Main-Is:        hus-x1-hub.hs
  Hs-Source-Dirs: app
  build-depends:        base,
                        vcd,
                        optparse-applicative,
                        attoparsec,
                        unordered-containers,
                        bytestring
  default-language:    Haskell2010

Executable vcd-rename
  ghc-options:  -rtsopts -O2 -threaded
  Main-Is:        vcd-rename.hs
  Hs-Source-Dirs: app
  build-depends:        base,
                        vcd,
                        optparse-applicative,
                        bytestring,
                        attoparsec,
                        unordered-containers
  default-language:    Haskell2010

Executable vcd-clock
  ghc-options:  -rtsopts -O2 -threaded
  Main-Is:        vcd-clock.hs
  Hs-Source-Dirs: app
  build-depends:        base,
                        vcd,
                        optparse-applicative,
                        bytestring,
                        attoparsec,
                        unordered-containers
  default-language:    Haskell2010

Executable vcd-transpose-hcd
  ghc-options:  -rtsopts -O2 -threaded
  Main-Is:        vcd-transpose-hcd.hs
  Hs-Source-Dirs: app
  build-depends:        base,
                        vcd,
                        optparse-applicative,
                        bytestring,
                        attoparsec,
                        unordered-containers
  default-language:    Haskell2010

Executable hcd-expand-hus
  ghc-options:  -rtsopts -O2 -threaded
  Main-Is:        hcd-expand-hus.hs
  Hs-Source-Dirs: app
  build-depends:        base,
                        vcd,
                        optparse-applicative,
                        bytestring,
                        attoparsec,
                        unordered-containers
  default-language:    Haskell2010

Executable hub-binl
  ghc-options:  -rtsopts -O2 -threaded
  Main-Is:        hub-binl.hs
  Hs-Source-Dirs: app
  includes:        aldc.h
  c-sources:          ALDC/aldc.c		
                      ALDC/bitfile.c
                      ALDC/brute.c
                      ALDC/memstream.c
  if os(darwin) {
  c-sources:
      ALDC/fmemopen.c
  }
  cc-options:          -O3 -c -march=native
  include-dirs:  ALDC
  build-depends:        base,
                        vcd,
                        optparse-applicative,
                        bytestring,
                        attoparsec,
                        unordered-containers
  default-language:    Haskell2010

Executable hcd-split-static
  ghc-options:  -rtsopts -O2 -threaded
  Main-Is:         hcd-split-static.hs
  Hs-Source-Dirs: app
  build-depends:        base,
                        vcd,
                        optparse-applicative,
                        bytestring,
                        attoparsec,
                        unordered-containers
  default-language:    Haskell2010

Executable hcd-force
  ghc-options:  -rtsopts -O2 -threaded
  Main-Is:         hcd-force.hs
  Hs-Source-Dirs: app
  build-depends:        base,
                        vcd,
                        optparse-applicative,
                        bytestring,
                        attoparsec,
                        unordered-containers
  default-language:    Haskell2010

Executable hcd-io
  ghc-options:  -rtsopts -O2 -threaded
  Main-Is:         hcd-io.hs
  Hs-Source-Dirs: app
  build-depends:        base,
                        safe,
                        vcd,
                        optparse-applicative,
                        bytestring,
                        attoparsec,
                        unordered-containers
  default-language:    Haskell2010

Executable hcd-split
  ghc-options:  -rtsopts -O2 -threaded
  Main-Is:         hcd-split.hs
  Hs-Source-Dirs: app
  build-depends:        base,
                        vcd,
                        optparse-applicative,
                        bytestring,
                        attoparsec,
                        unordered-containers
  default-language:    Haskell2010

Executable hcd-static
  ghc-options:  -rtsopts -O2 -threaded
  Main-Is:         hcd-static.hs
  Hs-Source-Dirs: app
  build-depends:        base,
                        vcd,
                        optparse-applicative,
                        bytestring,
                        attoparsec,
                        unordered-containers
  default-language:    Haskell2010

Executable hcd-output
  ghc-options:  -rtsopts -O2 -threaded
  Main-Is:         hcd-output.hs
  Hs-Source-Dirs: app
  build-depends:        base,
                        vcd,
                        optparse-applicative,
                        bytestring,
                        attoparsec,
                        unordered-containers
  default-language:    Haskell2010

Executable hus-x2-hub
  ghc-options:  -rtsopts -O2 -threaded
  Main-Is:         hus-x2-hub.hs
  Hs-Source-Dirs: app
  build-depends:        base,
                        vcd,
                        optparse-applicative,
                        bytestring,
                        attoparsec,
                        attoparsec,
                        unordered-containers
  default-language:    Haskell2010


Executable hus-custom-wavetable
  ghc-options:  -rtsopts -O2 -threaded
  Main-Is:         hus-custom-wavetable.hs
  Hs-Source-Dirs: app
  build-depends:        base,
                        vcd,
                        bytestring,
                        attoparsec,
                        optparse-applicative,
                        unordered-containers
  default-language:    Haskell2010

Executable hub-repeat-compress-hub
  ghc-options:  -rtsopts -O2 -threaded
  Main-Is:          hub-repeat-compress-hub.hs
  Hs-Source-Dirs: app
  build-depends:        base,
                        vcd,
                        bytestring,
                        attoparsec,
                        optparse-applicative,
                        unordered-containers
  default-language:    Haskell2010

Executable make-burst
  ghc-options:  -rtsopts -O2 -threaded
  Main-Is:          make-burst.hs
  Hs-Source-Dirs: app
  build-depends:        base,
                        vcd,
                        optparse-applicative
  default-language:    Haskell2010

Executable hus-jtag-comments
  ghc-options:  -rtsopts -O2 -threaded
  Main-Is:          hus-jtag-comments.hs
  Hs-Source-Dirs: app
  build-depends:        base,
                        bytestring,
                        vcd,
                        safe,
                        optparse-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gitfoxi/vcd-haskell
